# falco-backup-drive

./: .envrc  .gitignore  .hlint.yaml  LICENSE  README.md  default.nix  falco-backup-drive.cabal  flake.nix  fourmolu.yaml
app/: Cli.hs  Command.hs  Logger.hs  Main.hs  RunEffects.hs  Secrets.hs
app/Backup/: ExternalDisk.hs  PeriodicBackup.hs  RSync.hs
app/Config/: Drive.hs  GetConfig.hs  RsyncBackup.hs  State.hs  TopLevel.hs
app/Config/Backup/: ExternalDisk.hs  PeriodicBackup.hs  Rsync.hs
app/Database/Persistent/: SqliteEffect.hs
app/Drive/: MountDrive.hs
app/Effectful/: Error.hs  Shutdown.hs  Time.hs
app/Effectful/Persistent/: SqliteEffect.hs
app/State/: MostRecentBackup.hs
nix/: haskell-overlay.nix  overlay.nix
