cabal-version:   3.4
name:            falco-backup-drive
version:         0.1.0.0
synopsis:        Manage my personal backup drive
license:         MIT
license-file:    LICENSE
author:          Falco Peijnenburg
maintainer:      fpeijnenburg@gmail.com
category:        System
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

executable falco-backup-drive
  import:           warnings
  main-is:          Main.hs

  -- cabal-fmt: expand app -Main
  other-modules:
    Config.Drive
    Config.GetConfig
    Config.RsyncBackup
    Config.TopLevel
    Drive.MountDrive
    Logger
    Secrets

  -- other-extensions:
  build-depends:
    , aeson
    , base          ^>=4.17.1.0
    , bytestring
    , display
    , effectful
    , effectful-th
    , exceptions
    , text

  hs-source-dirs:   app
  default-language: GHC2021
